<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="left">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_slide_header"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <com.icoder.couldnewsclient.widget.CircleImageView
                    android:id="@+id/civ_user_hedaer"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/civ_user_hedaer"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/username"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_slide_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slide_menu_height"
                android:layout_below="@+id/rl_slide_header"
                android:background="?attr/selectorBtn"
                android:drawableLeft="@mipmap/biz_pc_main_message"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="我的消息" />

            <TextView
                android:id="@+id/tv_offline_read"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slide_menu_height"
                android:layout_below="@+id/tv_slide_message"
                android:background="?attr/selectorBtn"
                android:drawableLeft="@mipmap/biz_pc_main_offline"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="离线阅读" />

            <TextView
                android:id="@+id/tv_night_mode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slide_menu_height"
                android:layout_below="@+id/tv_offline_read"
                android:background="?attr/selectorBtn"
                android:drawableLeft="@mipmap/biz_pc_main_offline"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="夜间模式" />


        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/settings" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#aaaaaa" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/exit" />
    </LinearLayout>
</FrameLayout>